--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A very, very simplistic pub-sub and global data library without dependencies.",
   "main": "src/index.js",
   "scripts": {
-    "test": "node test"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -24,5 +24,8 @@
   "bugs": {
     "url": "https://github.com/miguelgilrosas/simple-pub-sub-global-data/issues"
   },
-  "homepage": "https://github.com/miguelgilrosas/simple-pub-sub-global-data#readme"
+  "homepage": "https://github.com/miguelgilrosas/simple-pub-sub-global-data#readme",
+  "devDependencies": {
+    "jest": "^26.6.3"
+  }
 }
