--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "simple-pub-sub-global-data",
   "version": "1.0.0",
   "description": "A very, very simplistic pub-sub and global data library without dependencies.",
-  "main": "src/index.js",
+  "main": "src-dist/index.js",
   "scripts": {
     "test": "jest"
   },
