--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
   "homepage": "https://github.com/miguelgilrosas/simple-pub-sub-global-data#readme",
   "devDependencies": {
     "jest": "^26.6.3"
-  }
+  },
+  "files": [
+    "src-dist"
+  ]
 }
